.disabled/uptime-kuma/uptime-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-lets-encrypt
    kubernetes.io/ingress.class: public
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - uptime.joachimprinzbach.com
      secretName: uptime-cert
  rules:
    - host: uptime.joachimprinzbach.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime
                port:
                  number: 80
